<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filters"
        android:textSize="28sp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/blood"
            android:layout_marginRight="25dp"/>
        <RadioButton
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/plasma"
            android:layout_marginRight="25dp"/>
        <RadioButton
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/platelets" />
    </RadioGroup>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <RadioButton
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/av_donors"/>
        <RadioButton
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/all_donors"/>
    </RadioGroup>

    <Spinner
        android:id="@+id/blood_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list"
        android:textSize="28dp"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginRight="18dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname"
            android:layout_marginRight="18dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CF"
            android:layout_marginRight="18dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_type"
            android:layout_marginRight="18dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"/>
    </LinearLayout>

    <TextView
        android:id="@+id/list_donors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"/>

</LinearLayout>