<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify_credentials"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/prev_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <EditText android:id="@+id/new_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_mail"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:id="@+id/prev_password"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prev_password"
        android:layout_marginBottom="10dp"/>
    <EditText android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:layout_marginBottom="10dp"/>
    <EditText android:id="@+id/conf_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/conf_new_password"
        android:layout_marginBottom="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changes"
        android:layout_gravity="center_horizontal"
        android:onClick="credChange"/>


</LinearLayout>
