<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal_data"
        android:textSize="28sp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/user_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/user_CF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/user_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/user_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:id="@+id/user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="phone"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/last_blood"/>
        <EditText
            android:id="@+id/user_last_blood"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:inputType="date"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/last_plasma"/>
        <EditText
            android:id="@+id/user_last_plasma"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:inputType="date"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/last_platelets"/>
        <EditText
            android:id="@+id/user_last_platelets"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:inputType="date"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/user_province"
            android:layout_width="175dp"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/prov_spinner1"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/user_blood_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changes"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="confChanges"/>
</LinearLayout>